--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
     background-color : #fff;
     color            : #333;
     font             : 1em / 1.4 Helvetica Neue, Helvetica, Arial, sans-serif;
-    padding          : 0;
+    padding          : 2em;
     margin           : 0;
 }
 
